Fixed issue on mobile.

--- a/css/colimit.css
+++ b/css/colimit.css
@@ -73,14 +73,16 @@ input[type="email"], input[type="submit"] {
   margin-bottom: 1rem;
 }
 input[type="submit"] {
-  background-color: #FFF500;
+  background-color: #d1c905;
   font-weight: 500;
   font-size: 1rem;
   text-transform: uppercase;
   cursor: pointer;
+  color: rgb(0 0 0 / 80%);
 }
 input[type="submit"]:hover {
-  background-color: #d1c905;
+  background-color: #FFF500;
+  color: rgb(0 0 0 / 100%);
 }
 ::placeholder {
   color: #979797;
@@ -103,9 +105,6 @@ input[type="submit"]:hover {
 }
 
 @media ( max-width: 600px ) {
-  * {
-    display: block;
-  }
   .hero {
     display: flex;
     flex-flow: column;
@@ -119,4 +118,16 @@ input[type="submit"]:hover {
   .right {
     display: none;
   }
+  ::placeholder {
+    font-size: 1rem;
+  }
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    * {
+      color: red;
+    }
 }
